third_party/move/move-compiler-v2/tests/checking/typing/v1-commands/unpack_missing_binding.exp

Diagnostics:
error: missing fields `y`
   ┌─ tests/checking/typing/v1-commands/unpack_missing_binding.move:11:13
   │
11 │         let T { i, x, b: flag } = t;
   │             ^^^^^^^^^^^^^^^^^^^

error: undeclared `Test::i`
   ┌─ tests/checking/typing/v1-commands/unpack_missing_binding.move:12:10
   │
12 │         (i, x, flag)
   │          ^

error: undeclared `Test::x`
   ┌─ tests/checking/typing/v1-commands/unpack_missing_binding.move:12:13
   │
12 │         (i, x, flag)
   │             ^

error: undeclared `Test::flag`
   ┌─ tests/checking/typing/v1-commands/unpack_missing_binding.move:12:16
   │
12 │         (i, x, flag)
   │                ^^^^
